flatten payload in several controllers
